--- a/src/stockfish-8.vcxproj
+++ b/src/stockfish-8.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="material.h" />
     <ClInclude Include="nnue\misc.h" />
     <ClInclude Include="nnue\nnue.h" />
+    <ClInclude Include="pragma.h" />
     <ClInclude Include="util.h" />
     <ClInclude Include="movegen.h" />
     <ClInclude Include="movepick.h" />
