--- a/src/stockfish-8.vcxproj.filters
+++ b/src/stockfish-8.vcxproj.filters
@@ -137,5 +137,8 @@
     <ClInclude Include="nnue\nnue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="pragma.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
